fix display flex and gap

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,6 +1,7 @@
 body {
+  display:flex;
   font-family: 'Courier New', Courier, monospace;
-  padding: 32px;
+  gap: 32px;
 }
 
 .plant-list {
